--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,12 @@ dependencies {
 
     implementation 'org.hibernate:hibernate-core:5.6.3.Final'
     runtimeOnly 'org.postgresql:postgresql:42.3.1'
+    implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.14.0'
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
+
+
+
+
     compileOnly 'org.projectlombok:lombok:1.18.22'
     annotationProcessor 'org.projectlombok:lombok:1.18.22'
 
