--- a/build.gradle
+++ b/build.gradle
@@ -20,8 +20,7 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql:42.3.1'
     implementation group: 'com.vladmihalcea', name: 'hibernate-types-52', version: '2.14.0'
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
-
-
+    implementation 'org.slf4j:slf4j-log4j12:1.7.32'
 
 
     compileOnly 'org.projectlombok:lombok:1.18.22'
@@ -29,8 +28,6 @@ dependencies {
 
     testCompileOnly 'org.projectlombok:lombok:1.18.22'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
-
-
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 }
